--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-	
+
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Spread | Kinza & Michael</title>
 	<link href="reset.css" rel="stylesheet">
-	<link rel="stylesheet" href="project02style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
+	<header>
+		<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
+	</header>
+	<blockquote>
+		The world is designed against the elderly, writes Don Norman, 83-year-old author of the industry bible Design of Everyday Things and a former Apple VP.
+	</blockquote>
+	<article>
+		<section>
+			<p>
+				More people than ever are living long, healthy lives. According to the U.S. Department of Health and Human Services, the average life expectancy is 78.6 years for men and 81.1 for women. More relevant, however, is that as people grow older, their total life expectancy increases. So for those who are now 65, the average life expectancy is 83 for men and over 85 for women. And because I’m 83, I’m expected to live past 90 (but I’m aiming a lot higher than that). And these are averages, which means that perhaps half of us will live even longer.
+			</p>
+			<p>
+				Those of us who are still active and healthy at advanced ages–I qualify–discover that we aren’t quite as capable as our younger selves. That doesn’t mean that we aren’t healthy and workable–I still have a very active job and travel on business around the world, but I have to admit that I’m getting slower and weaker, with diminished eyesight, hearing, taste, touch, and, well, almost everything physical. The number of active, healthy oldsters is large–and increasing. We are not a niche market. And businesses should take note: We are good customers often with more free time and discretionary income than younger people.
+			</p>
+		</section>
+		<header>
+			<p>What older consumers want and need</p>
+		</header>
+		<section>
+			<p>
+				As we age, we have more experience with life, which can make us better decision-makers and managers. Crystalized intelligence, it is called, and it gets better with experience. A caveat is that we often face physical changes that designers fail to account for into their work.
+			</p>
+			<p>
+				Vision deteriorates. The lens of our eyes harden, making focusing more difficult. I used to be able to read tiny text by holding it close to my eyes, but my inability to focus at close distances defeats that activity. Floaters and debris start accumulating inside the eye, which scatters the light on its way to the retina, reducing contrast and making it more difficult to see small, low-contrast objects. For the increasing number of people who have cataract surgery, the eye’s lenses have ben replaced with plastic, which usually have a fixed focus. (Artificial lenses that can be focused are under development.) A flashlight has become an essential item, whether the one built into many phones or carried separately, because illumination makes tiny type easier to read although even then, a magnifying glass might be useful.
+			</p>
+			<p>
+				Hearing decreases. High frequencies are first to go, which also tends to impair directional sensitivity, which in turn makes it more difficult to attend to someone in a crowded, noisy environment. Loud restaurants are torture. So, more and more, my wife and I select restaurants by their noise level rather than by their food quality. At home while watching TV, whether shows, streaming events, or movies, we always turn on the captions, which often block critical parts of the image. Even worse, when a film shows someone speaking in a foreign language, the film often translates the words, but so too does the closed captioning, and the two are placed on top of one another, making both attempts to help the viewer completely unhelpful.
+			</p>
+		</section>
+
+	</article>
 </body>
 </html>
