--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 		<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
 	</header>
 	<blockquote>
+		<p>
 		The world is designed against the elderly, writes Don Norman, 83-year-old author of the industry bible Design of Everyday Things and a former Apple VP.
+		</p>
 	</blockquote>
 	<article>
 		<section>
@@ -38,6 +40,72 @@
 				Hearing decreases. High frequencies are first to go, which also tends to impair directional sensitivity, which in turn makes it more difficult to attend to someone in a crowded, noisy environment. Loud restaurants are torture. So, more and more, my wife and I select restaurants by their noise level rather than by their food quality. At home while watching TV, whether shows, streaming events, or movies, we always turn on the captions, which often block critical parts of the image. Even worse, when a film shows someone speaking in a foreign language, the film often translates the words, but so too does the closed captioning, and the two are placed on top of one another, making both attempts to help the viewer completely unhelpful.
 			</p>
 		</section>
+
+		<header>
+			<p>Bad design abounds</p>
+		</header>
+
+		<section>
+			<p>
+				The problems I face are much milder than those faced by millions of aging people. With so many of us needing better devices, why are so many things still designed in ways that defeat our ability to function?
+			</p>
+
+			<p>
+				Take the screen design for Apple’s phones. The designers at Apple apparently believe that text is ugly, so it should either be eliminated entirely or made as invisible as possible. Bruce Tognazzini and I, both former employees of Apple, wrote a long article on Apple’s usability sins ,which has been read by hundreds of thousands of people. Once Apple products could be used without ever reading a manual. Today, Apple’s products violate all the fundamental rules of design for understanding and usability, many of which Tognazzini and I had helped develop. As a result, even a manual is not enough: all the arbitrary gestures that control tablets, phones, and computers have to be memorized. Everything has to be memorized.
+			</p>
+
+			<p>
+				These thoughtless, inappropriate designs are not limited to Apple. New technologies tend to rely on display screens, often with tiny lettering, with touch-sensitive areas that are exceedingly difficult to hit as eye-hand coordination declines. Physical controls are by far the easiest to control–safer too, especially in safety-critical tasks such as driving a car, but they are disappearing. Why? To save a few cents in manufacturing and in a misplaced desire to be trendy. Speech can be a useful substitute for physical controls, though not as helpful as proponents claim.
+			</p>
+
+			<p>
+				Then there’s the aesthetic problem. When products are developed for the elderly, they tend to be ugly and an unwanted signal of fragility. As a result, people who need walkers or canes often resist. Once upon a time, a cane was stylish: Today it is seen as a medical device. Why can’t we have walkers and canes for everyday use, to help us in everyday life, to carry our packages, provide a way to sit when we are tired, or viewing some event, and yes, to maintain our balance? Make them items of pride, stylish enough that everyone will want one.
+			</p>
+		</section>
+
+		<header>
+			<p>Everyone needs better design</p>
+		</header>
+		
+		<section>
+			<p>
+				Do not think that thoughtful design is just for the elderly, or the sick, or the disabled. In the field of design, this is called “inclusive design” for a reason: It helps everyone. Curb cuts were meant to help people who had trouble walking, but it helps anyone wheeling things: carts, baby carriages, suitcases. Closed captions are used in noisy bars. As Kat Holmes points out in her book Mismatch, all of us are disabled now and then. Some of us have permanent disabilities, but all of us have suffered from situational and temporary problems. When outside in the sun, the text message that just arrived is unreadable: wouldn’t it be nice if the display, whether cellphone, watch, or tablet, could switch to large, higher contrast lettering? Are elderly people handicapped? Maybe, but so is a young, athletic parent while carrying a baby on one arm and a bag of groceries in the other (and perhaps trying to open their car door). Ride-share bicycles and scooters cannot be used by people who need to carry bulky packages. Everyone has difficulty hearing people in noisy environments. Noise-canceling headphones are for everyone, not just the elderly. Almost anything that will help the elderly population will end up helping everyone.
+			</p>
+		</section>
+
+		<header>
+			<p>The promise of good design</p>
+		</header>
+
+		<section>
+			<p>
+				Jeremy Myerson, a designer at London’s Royal College of Art (and a good friend) curated an enticing exhibit at London’s Design Museum entitled “New Old,” that explored the potential for design and designers to enhance the experience of our later lives (described in this Fast Company article “Why you should be designing for your 73-year-old self). Walkers, scooters, and shopping carts for the elderly tend to lack any semblance of grace or elegance. Not so the “scooter for life,” designed by the British firm PriestmanGoode, which has three wheels for stability and a sleek pouch for storing groceries.
+			</p>
+
+			<p>
+				Powerful lightweight motors and batteries promise to motorize many new things, including walkers, wheelchairs, bicycles, tricycles, baby carriages, and shopping carts. I’ve even seen electric surfboards. If these devices are stylish and useful, they will empower everyone, from the very young to the very old. Moreover, once the stigma attached to devices that look medical is eliminated, we will see more elderly adding to their activities, and more 90-year-olds surfing. One of my 90-year-old friends just started scuba diving. Age is not a barrier.
+			</p>
+
+			<p>
+				Are there any other examples of promising designs for older people? Yes, but they are surprisingly difficult to find. They are so rare that when they are found, museums put on them on exhibit and newspapers write articles.
+			</p>
+		</section>
+
+		<header>
+			<p>Looking Ahead</p>
+		</header>
+		
+		<section>
+			<p>
+				Designers and companies of the world, you are badly serving an ever-growing segment of your customer base, a segment that you too will one day inhabit. Isn’t it time to reform: to make things that are functional and stylish, useable and accessible? Every ailment that I described that impacts the elderly is also present in people of all ages. Designs that make it easier for elderly people often are of equal value for younger people. In fact, for everyone. Help the elderly, and the results will help many more, including yourself, someday.
+			</p>
+		</section>
+
+		<blockquote>
+			<p>
+				Don Norman is a leading authority on the design of emotional pleasing and useable technology. He is the author of Design of Everyday Things and Emotional Design, a former vice president at Apple, and professor and director of the Design Lab at the University of California, San Diego.
+			</p>
+		</blockquote>
 
 	</article>
 </body>
