--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Spread | Kinza & Michael</title>
 	<link href="reset.css" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://use.typekit.net/niq6kio.css">
 </head>
 
 <body>
