adding buttons, anchor links, link to top

--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
 </head>
 
 <body>
-	<header>
+	
+	<header id = "top">
 		<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
+		<section class = "links">
+			<a href ="#top" class = "topbutton">To Top</a>
+			<a href="#intro">Introductory Notes</a>
+			<a href="#consumer">Older Consumer Needs</a>
+			<a href="#abounds">Bad Design Abounds</a>
+			<a href="#better">Everyone Needs Better Design</a>
+			<a href="#promise">Promise of Good Design</a>
+			<a href="#ahead">Looking Ahead</a>
+  </section>
 	</header>
-	<blockquote>
+	<blockquote id = "intro">
 		<p>
 		The world is designed against the elderly, writes Don Norman, 83-year-old author of the industry bible Design of Everyday Things and a former Apple VP.
 		</p>
@@ -27,7 +37,7 @@
 				Those of us who are still active and healthy at advanced ages–I qualify–discover that we aren’t quite as capable as our younger selves. That doesn’t mean that we aren’t healthy and workable–I still have a very active job and travel on business around the world, but I have to admit that I’m getting slower and weaker, with diminished eyesight, hearing, taste, touch, and, well, almost everything physical. The number of active, healthy oldsters is large–and increasing. We are not a niche market. And businesses should take note: We are good customers often with more free time and discretionary income than younger people.
 			</p>
 		</section>
-		<header>
+		<header  id = "consumer">
 			<p>What older consumers want and need</p>
 		</header>
 		<section>
@@ -42,7 +52,7 @@
 			</p>
 		</section>
 
-		<header>
+		<header id = "abounds">
 			<p>Bad design abounds</p>
 		</header>
 
@@ -64,7 +74,7 @@
 			</p>
 		</section>
 
-		<header>
+		<header  id = "better">
 			<p>Everyone needs better design</p>
 		</header>
 		
@@ -74,7 +84,7 @@
 			</p>
 		</section>
 
-		<header>
+		<header  id = "promise">
 			<p>The promise of good design</p>
 		</header>
 
@@ -92,7 +102,7 @@
 			</p>
 		</section>
 
-		<header>
+		<header id = "ahead">
 			<p>Looking Ahead</p>
 		</header>
 		
