Fixed paragraph spacing
Also removed buttons temporarily for clearer focus on text setting

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<header id = "top">
 		<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
-		<section class = "links">
+		<!-- <section class = "links">
 			<a href ="#top" class = "topbutton">To Top</a>
 			<a href="#intro">Introductory Notes</a>
 			<a href="#consumer">Older Consumer Needs</a>
@@ -21,7 +21,7 @@
 			<a href="#better">Everyone Needs Better Design</a>
 			<a href="#promise">Promise of Good Design</a>
 			<a href="#ahead">Looking Ahead</a>
-  </section>
+  </section> -->
 	</header>
 	<blockquote id = "intro">
 		<p>
