Adding word breaks to em dash sections

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				More people than ever are living long, healthy lives. According to the U.S. Department of Health and Human Services, the average life expectancy is 78.6 years for men and 81.1 for women. More relevant, however, is that as people grow older, their total life expectancy increases. So for those who are now 65, the average life expectancy is 83 for men and over 85 for women. And because I’m 83, I’m expected to live past 90 (but I’m aiming a lot higher than that). And these are averages, which means that perhaps half of us will live even longer.
 			</p>
 			<p>
-				Those of us who are still active and healthy at advanced ages–I qualify–discover that we aren’t quite as capable as our younger selves. That doesn’t mean that we aren’t healthy and workable–I still have a very active job and travel on business around the world, but I have to admit that I’m getting slower and weaker, with diminished eyesight, hearing, taste, touch, and, well, almost everything physical. The number of active, healthy oldsters is large–and increasing. We are not a niche market. And businesses should take note: We are good customers often with more free time and discretionary income than younger people.
+				Those of us who are still active and healthy at advanced ages –<wbr>I qualify–<wbr> discover that we aren’t quite as capable as our younger selves. That doesn’t mean that we aren’t healthy and workable–<wbr>I still have a very active job and travel on business around the world, but I have to admit that I’m getting slower and weaker, with diminished eyesight, hearing, taste, touch, and, well, almost everything physical. The number of active, healthy oldsters is large–<wbr>and increasing. We are not a niche market. And businesses should take note: We are good customers often with more free time and discretionary income than younger people.
 			</p>
 		</section>
 		<header  id = "consumer">
@@ -65,7 +65,7 @@
 			</p>
 
 			<p>
-				These thoughtless, inappropriate designs are not limited to Apple. New technologies tend to rely on display screens, often with tiny lettering, with touch-sensitive areas that are exceedingly difficult to hit as eye-hand coordination declines. Physical controls are by far the easiest to control–safer too, especially in safety-critical tasks such as driving a car, but they are disappearing. Why? To save a few cents in manufacturing and in a misplaced desire to be trendy. Speech can be a useful substitute for physical controls, though not as helpful as proponents claim.
+				These thoughtless, inappropriate designs are not limited to Apple. New technologies tend to rely on display screens, often with tiny lettering, with touch-sensitive areas that are exceedingly difficult to hit as eye-hand coordination declines. Physical controls are by far the easiest to control–<wbr>safer too, especially in safety-critical tasks such as driving a car, but they are disappearing. Why? To save a few cents in manufacturing and in a misplaced desire to be trendy. Speech can be a useful substitute for physical controls, though not as helpful as proponents claim.
 			</p>
 
 			<p>
