style buttons/in-article links
changing button style from old iOS gradient to flat color design with stroke. also added hover effects with inner shadow

--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 	
 	<header id = "top">
 		<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
-		<!-- <section class = "links">
-			<a href ="#top" class = "topbutton">To Top</a>
-			<a href="#intro">Introductory Notes</a>
-			<a href="#consumer">Older Consumer Needs</a>
-			<a href="#abounds">Bad Design Abounds</a>
-			<a href="#better">Everyone Needs Better Design</a>
-			<a href="#promise">Promise of Good Design</a>
-			<a href="#ahead">Looking Ahead</a>
-  </section> -->
+		<section class = "links">
+			<a class = "linkbutton" href="#intro">Introductory Notes</a>
+			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
+			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
+			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
+			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
+			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
+  </section>
 	</header>
 	<blockquote id = "intro">
 		<p>
@@ -41,10 +40,10 @@
 		</header>
 		<section>
 			<p>
-				As we age, we have more experience with life, which can make us better decision-makers and managers. <a href= "https://en.wikipedia.org/wiki/Fluid_and_crystallized_intelligence" target="_blank">Crystalized&nbsp;intelligence</a>, it is called, and it gets better with experience. A caveat is that we often face physical changes that designers fail to account for into their work.
+				As we age, we have more experience with life, which can make us better decision-makers and managers. <a href= "https://en.wikipedia.org/wiki/Fluid_and_crystallized_intelligence" target="_blank">Crystalized&nbsp;intelligence,</a> it is called, and it gets better with experience. A caveat is that we often face physical changes that designers fail to account for into their work.
 			</p>
 			<p>
-				<a href="https://www.nia.nih.gov/health/vision-and-vision-loss/aging-and-your-eyes"target="_blank">Vision&nbsp;deteriorates</a>. The lens of our eyes harden, making focusing more difficult. I used to be able to read tiny text by holding it close to my eyes, but my inability to focus at close distances defeats that activity. Floaters and debris start accumulating inside the eye, which scatters the light on its way to the retina, reducing contrast and making it more difficult to see small, low-contrast objects. For the increasing number of people who have cataract surgery, the eye’s lenses have ben replaced with plastic, which usually have a fixed focus. (Artificial lenses that can be focused are under development.) A flashlight has become an essential item, whether the one built into many phones or carried separately, because illumination makes tiny type easier to read although even then, a magnifying glass might be useful.
+				<a href="https://www.nia.nih.gov/health/vision-and-vision-loss/aging-and-your-eyes"target="_blank">Vision&nbsp;deteriorates.</a> The lens of our eyes harden, making focusing more difficult. I used to be able to read tiny text by holding it close to my eyes, but my inability to focus at close distances defeats that activity. Floaters and debris start accumulating inside the eye, which scatters the light on its way to the retina, reducing contrast and making it more difficult to see small, low-contrast objects. For the increasing number of people who have cataract surgery, the eye’s lenses have ben replaced with plastic, which usually have a fixed focus. (Artificial lenses that can be focused are under development.) A flashlight has become an essential item, whether the one built into many phones or carried separately, because illumination makes tiny type easier to read although even then, a magnifying glass might be useful.
 			</p>
 			<p>
 				<a hred="https://www.nia.nih.gov/health/hearing-and-hearing-loss/hearing-loss-common-problem-older-adults"target="_blank">Hearing&nbsp;decreases</a>. High frequencies are first to go, which also tends to impair directional sensitivity, which in turn makes it more difficult to attend to someone in a crowded, noisy environment. Loud restaurants are torture. So, more and more, my wife and I select restaurants by their noise level rather than by their food quality. At home while watching TV, whether shows, streaming events, or movies, we always turn on the captions, which often block critical parts of the image. Even worse, when a film shows someone speaking in a foreign language, the film often translates the words, but so too does the closed captioning, and the two are placed on top of one another, making both attempts to help the viewer completely unhelpful.
