--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	
 	<header id = "top">
 		<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
-		<section class = "links">
+		<!-- <section class = "links">
 			<a class = "linkbutton" href="#intro">Introductory Notes</a>
 			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
 			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
 			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
 			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
 			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
-  </section>
+  </section> -->
 	</header>
 	<blockquote id = "intro">
 		<p>
