Stylized blockquote more
Added container box + new color placement

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </section> -->
 	</header>
 	<blockquote id = "intro">
+		<p class = "quoteheader">Foreword</p>
 		<p>
 		The world is designed against the elderly, writes Don Norman, 83-year-old author of the industry bible Design of Everyday Things and a former Apple VP.
 		</p>
