futher updates to blockquote styling, modifying margins and padding

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 		</section>
 	</article>
 		<blockquote>
+			<p class = "quoteheader">Closing</p>
 			<p>
 				Don Norman is a leading authority on the design of emotional pleasing and useable technology. He is the author of Design of Everyday Things and Emotional Design, a former vice president at Apple, and professor and director of the Design Lab at the University of California, San Diego.
 			</p>
