Added section styling and added spacing accordingly
Leaning towards a container style for the whole website

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 		</p>
 	</blockquote>
 	<article>
-		<section>
+		
+		<section class = "beginning">
+		
+		<header>
+			<p>Intro</p>
+		</header>
 			<p>
 				More people than ever are living long, healthy lives. According to the U.S. Department of Health and Human Services, the average <a href= "https://www.cdc.gov/nchs/fastats/life-expectancy.htm" target="_blank">life&nbsp;expectancy</a> is 78.6 years for men and 81.1 for women. More relevant, however, is that as people grow older, their total life expectancy increases. So for those who are now 65, the average life expectancy is 83 for men and over 85 for women. And because I’m 83, I’m expected to live past 90 (but I’m aiming a lot higher than that). And these are averages, which means that perhaps half of us will live even longer.
 			</p>
@@ -36,10 +41,13 @@
 				Those of us who are still active and healthy at advanced ages –<wbr>I qualify–<wbr> discover that we aren’t quite as capable as our younger selves. That doesn’t mean that we aren’t healthy and workable–<wbr>I still have a very active job and travel on business around the world, but I have to admit that I’m getting slower and weaker, with diminished eyesight, hearing, taste, touch, and, well, almost everything physical. The number of active, healthy oldsters is large–<wbr>and increasing. We are not a niche market. And businesses should take note: We are good customers often with more free time and discretionary income than younger people.
 			</p>
 		</section>
+
+		<section>
+
 		<header  id = "consumer">
 			<p>What older consumers want and need</p>
 		</header>
-		<section>
+
 			<p>
 				As we age, we have more experience with life, which can make us better decision-makers and managers. <a href= "https://en.wikipedia.org/wiki/Fluid_and_crystallized_intelligence" target="_blank">Crystalized&nbsp;intelligence,</a> it is called, and it gets better with experience. A caveat is that we often face physical changes that designers fail to account for into their work.
 			</p>
@@ -51,11 +59,12 @@
 			</p>
 		</section>
 
+		<section>
+
 		<header id = "abounds">
 			<p>Bad design abounds</p>
 		</header>
 
-		<section>
 			<p>
 				The problems I face are much milder than those faced by millions of aging people. With so many of us needing better devices, why are so many things still designed in ways that defeat our ability to function?
 			</p>
@@ -73,21 +82,23 @@
 			</p>
 		</section>
 
+		<section>
+
 		<header  id = "better">
 			<p>Everyone needs better design</p>
 		</header>
 		
-		<section>
 			<p>
 				Do not think that thoughtful design is just for the elderly, or the sick, or the disabled. In the field of design, this is called “inclusive design” for a reason: It helps everyone. Curb cuts were meant to help people who had trouble walking, but it helps anyone wheeling things: carts, baby carriages, suitcases. Closed captions are used in noisy bars. As Kat Holmes points out in her book Mismatch, all of us are disabled now and then. Some of us have permanent disabilities, but all of us have suffered from situational and temporary problems. When outside in the sun, the text message that just arrived is unreadable: wouldn’t it be nice if the display, whether cellphone, watch, or tablet, could switch to large, higher contrast lettering? Are elderly people handicapped? Maybe, but so is a young, athletic parent while carrying a baby on one arm and a bag of groceries in the other (and perhaps trying to open their car door). Ride-share bicycles and scooters cannot be used by people who need to carry bulky packages. Everyone has difficulty hearing people in noisy environments. Noise-canceling headphones are for everyone, not just the elderly. Almost anything that will help the elderly population will end up helping everyone.
 			</p>
 		</section>
 
+		<section>
+
 		<header  id = "promise">
 			<p>The promise of good design</p>
 		</header>
 
-		<section>
 			<p>
 				Jeremy Myerson, a designer at London’s Royal College of Art (and a good friend) curated an enticing exhibit at London’s Design Museum entitled “New Old,” that explored the potential for design and designers to enhance the experience of our later lives (described in this Fast Company article “Why you should be designing for your 73-year-old self). Walkers, scooters, and shopping carts for the elderly tend to lack any semblance of grace or elegance. Not so the “scooter for life,” designed by the British firm PriestmanGoode, which has three wheels for stability and a sleek pouch for storing groceries.
 			</p>
@@ -101,11 +112,12 @@
 			</p>
 		</section>
 
+		<section>
+
 		<header id = "ahead">
 			<p>Looking Ahead</p>
 		</header>
 		
-		<section>
 			<p>
 				Designers and companies of the world, you are badly serving an ever-growing segment of your customer base, a segment that you too will one day inhabit. Isn’t it time to reform: to make things that are functional and stylish, useable and accessible? Every ailment that I described that impacts the elderly is also present in people of all ages. Designs that make it easier for elderly people often are of equal value for younger people. In fact, for everyone. Help the elderly, and the results will help many more, including yourself, someday.
 			</p>
