styling buttons for section headers

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
 
 		<section>
 
+			<div class = "links">
+			<a class = "linkbutton" href="#intro">Introductory Notes</a>
+			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
+			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
+			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
+			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
+			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
+  		</div>
+
 		<header  id = "consumer">
 			<p>What older consumers want and need</p>
 		</header>
@@ -62,6 +71,15 @@
 		</section>
 
 		<section>
+
+			<div class = "links">
+			<a class = "linkbutton" href="#intro">Introductory Notes</a>
+			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
+			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
+			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
+			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
+			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
+  		</div>
 
 		<header id = "abounds">
 			<p>Bad design abounds</p>
@@ -86,6 +104,15 @@
 
 		<section>
 
+			<div class = "links">
+			<a class = "linkbutton" href="#intro">Introductory Notes</a>
+			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
+			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
+			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
+			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
+			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
+  		</div>
+
 		<header  id = "better">
 			<p>Everyone needs better design</p>
 		</header>
@@ -96,6 +123,15 @@
 		</section>
 
 		<section>
+
+			<div class = "links">
+			<a class = "linkbutton" href="#intro">Introductory Notes</a>
+			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
+			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
+			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
+			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
+			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
+  		</div>
 
 		<header  id = "promise">
 			<p>The promise of good design</p>
@@ -115,6 +151,15 @@
 		</section>
 
 		<section>
+
+			<div class = "links">
+			<a class = "linkbutton" href="#intro">Introductory Notes</a>
+			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
+			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
+			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
+			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
+			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
+  		</div>
 
 		<header id = "ahead">
 			<p>Looking Ahead</p>
