Updating link tag styling, adding new class for active state

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	
 	<header id = "top">
-		<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
+		<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
 		
 	</header>
 	<blockquote id = "intro">
@@ -21,20 +21,20 @@
 		</p>
 	</blockquote>
 	<article>
-		
-		<section class = "beginning">
-		
-		<div class = "links">
-			<a class = "linkbutton" href="#intro">Introductory Notes</a>
-			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
-			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
-			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
-			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
+		<div class = "links beginning">
+			<a class = "activelinkbutton" href="#intro">Intro</a>
+			<a class = "linkbutton" href="#consumer">Needs</a>
+			<a class = "linkbutton" href="#abounds">Bad Design</a>
+			<a class = "linkbutton" href="#better">Better Design</a>
+			<a class = "linkbutton" href="#promise">Promise</a>
 			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
   		</div>
+		<section>
+		
+		
 
 		<header>
-			<p>Intro</p>
+			<p>Introduction</p>
 		</header>
 			<p>
 				More people than ever are living long, healthy lives. According to the U.S. Department of Health and Human Services, the average <a href= "https://www.cdc.gov/nchs/fastats/life-expectancy.htm" target="_blank">life&nbsp;expectancy</a> is 78.6 years for men and 81.1 for women. More relevant, however, is that as people grow older, their total life expectancy increases. So for those who are now 65, the average life expectancy is 83 for men and over 85 for women. And because I’m 83, I’m expected to live past 90 (but I’m aiming a lot higher than that). And these are averages, which means that perhaps half of us will live even longer.
@@ -43,17 +43,17 @@
 				Those of us who are still active and healthy at advanced ages –<wbr>I qualify–<wbr> discover that we aren’t quite as capable as our younger selves. That doesn’t mean that we aren’t healthy and workable–<wbr>I still have a very active job and travel on business around the world, but I have to admit that I’m getting slower and weaker, with diminished eyesight, hearing, taste, touch, and, well, almost everything physical. The number of active, healthy oldsters is large–<wbr>and increasing. We are not a niche market. And businesses should take note: We are good customers often with more free time and discretionary income than younger people.
 			</p>
 		</section>
-
-		<section>
-
-			<div class = "links">
-			<a class = "linkbutton" href="#intro">Introductory Notes</a>
-			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
-			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
-			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
-			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
+<div class = "links">
+			<a class = "linkbutton" href="#intro">Intro</a>
+			<a class = "activelinkbutton" href="#consumer">Needs</a>
+			<a class = "linkbutton" href="#abounds">Bad Design</a>
+			<a class = "linkbutton" href="#better">Better Design</a>
+			<a class = "linkbutton" href="#promise">Promise</a>
 			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
   		</div>
+		<section>
+
+			
 
 		<header  id = "consumer">
 			<p>What older consumers want and need</p>
@@ -70,16 +70,18 @@
 			</p>
 		</section>
 
-		<section>
-
-			<div class = "links">
-			<a class = "linkbutton" href="#intro">Introductory Notes</a>
-			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
-			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
-			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
-			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
+<div class = "links">
+			<a class = "linkbutton" href="#intro">Intro</a>
+			<a class = "linkbutton" href="#consumer">Needs</a>
+			<a class = "activelinkbutton" href="#abounds">Bad Design</a>
+			<a class = "linkbutton" href="#better">Better Design</a>
+			<a class = "linkbutton" href="#promise">Promise</a>
 			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
   		</div>
+		
+		<section>
+
+			
 
 		<header id = "abounds">
 			<p>Bad design abounds</p>
@@ -101,17 +103,17 @@
 				Then there’s the aesthetic problem. When products are developed for the elderly, they tend to be ugly and an unwanted signal of fragility. As a result, people who need walkers or canes often resist. Once upon a time, a cane was stylish: Today it is seen as a medical device. Why can’t we have walkers and canes for everyday use, to help us in everyday life, to carry our packages, provide a way to sit when we are tired, or viewing some event, and yes, to maintain our balance? Make them items of pride, stylish enough that everyone will want one.
 			</p>
 		</section>
-
-		<section>
-
-			<div class = "links">
-			<a class = "linkbutton" href="#intro">Introductory Notes</a>
-			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
-			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
-			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
-			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
+<div class = "links">
+			<a class = "linkbutton" href="#intro">Intro</a>
+			<a class = "linkbutton" href="#consumer">Needs</a>
+			<a class = "linkbutton" href="#abounds">Bad Design</a>
+			<a class = "activelinkbutton" href="#better">Better Design</a>
+			<a class = "linkbutton" href="#promise">Promise</a>
 			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
   		</div>
+		<section>
+
+			
 
 		<header  id = "better">
 			<p>Everyone needs better design</p>
@@ -122,16 +124,16 @@
 			</p>
 		</section>
 
-		<section>
-
 			<div class = "links">
-			<a class = "linkbutton" href="#intro">Introductory Notes</a>
-			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
-			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
-			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
-			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
+			<a class = "linkbutton" href="#intro">Intro</a>
+			<a class = "linkbutton" href="#consumer">Needs</a>
+			<a class = "linkbutton" href="#abounds">Bad Design</a>
+			<a class = "linkbutton" href="#better">Better Design</a>
+			<a class = "activelinkbutton" href="#promise">Promise</a>
 			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
   		</div>
+		<section>
+
 
 		<header  id = "promise">
 			<p>The promise of good design</p>
@@ -149,17 +151,17 @@
 				Are there any other examples of promising designs for older people? Yes, but they are surprisingly difficult to find. They are so rare that when they are found, museums put on them on exhibit and newspapers write articles.
 			</p>
 		</section>
-
+<div class = "links">
+			<a class = "linkbutton" href="#intro">Intro</a>
+			<a class = "linkbutton" href="#consumer">Needs</a>
+			<a class = "linkbutton" href="#abounds">Bad Design</a>
+			<a class = "linkbutton" href="#better">Better Design</a>
+			<a class = "linkbutton" href="#promise">Promise</a>
+			<a class = "activelinkbutton" href="#ahead">Looking Ahead</a>
+  		</div>
 		<section>
 
-			<div class = "links">
-			<a class = "linkbutton" href="#intro">Introductory Notes</a>
-			<a class = "linkbutton" href="#consumer">Older Consumer Needs</a>
-			<a class = "linkbutton" href="#abounds">Bad Design Abounds</a>
-			<a class = "linkbutton" href="#better">Everyone Needs Better Design</a>
-			<a class = "linkbutton" href="#promise">Promise of Good Design</a>
-			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
-  		</div>
+			
 
 		<header id = "ahead">
 			<p>Looking Ahead</p>
