move id tags to link rows

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 		<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
 		
 	</header>
-	<blockquote id = "intro">
+	<blockquote>
 		<p class = "quoteheader">Foreword</p>
 		<p>
 		The world is designed against the elderly, writes Don Norman, 83-year-old author of the industry bible Design of Everyday Things and a former Apple VP.
 		</p>
 	</blockquote>
 	<article>
-		<div class = "links beginning">
+		<div id = "intro" class = "links beginning">
 			<a class = "activelinkbutton" href="#intro">Intro</a>
 			<a class = "linkbutton" href="#consumer">Needs</a>
 			<a class = "linkbutton" href="#abounds">Bad Design</a>
@@ -43,7 +43,7 @@
 				Those of us who are still active and healthy at advanced ages –<wbr>I qualify–<wbr> discover that we aren’t quite as capable as our younger selves. That doesn’t mean that we aren’t healthy and workable–<wbr>I still have a very active job and travel on business around the world, but I have to admit that I’m getting slower and weaker, with diminished eyesight, hearing, taste, touch, and, well, almost everything physical. The number of active, healthy oldsters is large–<wbr>and increasing. We are not a niche market. And businesses should take note: We are good customers often with more free time and discretionary income than younger people.
 			</p>
 		</section>
-<div class = "links">
+<div class = "links" id = "consumer">
 			<a class = "linkbutton" href="#intro">Intro</a>
 			<a class = "activelinkbutton" href="#consumer">Needs</a>
 			<a class = "linkbutton" href="#abounds">Bad Design</a>
@@ -55,7 +55,7 @@
 
 			
 
-		<header  id = "consumer">
+		<header>
 			<p>What older consumers want and need</p>
 		</header>
 
@@ -70,7 +70,7 @@
 			</p>
 		</section>
 
-<div class = "links">
+<div class = "links" id = "abounds">
 			<a class = "linkbutton" href="#intro">Intro</a>
 			<a class = "linkbutton" href="#consumer">Needs</a>
 			<a class = "activelinkbutton" href="#abounds">Bad Design</a>
@@ -83,7 +83,7 @@
 
 			
 
-		<header id = "abounds">
+		<header>
 			<p>Bad design abounds</p>
 		</header>
 
@@ -103,7 +103,7 @@
 				Then there’s the aesthetic problem. When products are developed for the elderly, they tend to be ugly and an unwanted signal of fragility. As a result, people who need walkers or canes often resist. Once upon a time, a cane was stylish: Today it is seen as a medical device. Why can’t we have walkers and canes for everyday use, to help us in everyday life, to carry our packages, provide a way to sit when we are tired, or viewing some event, and yes, to maintain our balance? Make them items of pride, stylish enough that everyone will want one.
 			</p>
 		</section>
-<div class = "links">
+<div class = "links" id = "better">
 			<a class = "linkbutton" href="#intro">Intro</a>
 			<a class = "linkbutton" href="#consumer">Needs</a>
 			<a class = "linkbutton" href="#abounds">Bad Design</a>
@@ -115,7 +115,7 @@
 
 			
 
-		<header  id = "better">
+		<header>
 			<p>Everyone needs better design</p>
 		</header>
 		
@@ -124,7 +124,7 @@
 			</p>
 		</section>
 
-			<div class = "links">
+			<div class = "links" id = "promise">
 			<a class = "linkbutton" href="#intro">Intro</a>
 			<a class = "linkbutton" href="#consumer">Needs</a>
 			<a class = "linkbutton" href="#abounds">Bad Design</a>
@@ -135,7 +135,7 @@
 		<section>
 
 
-		<header  id = "promise">
+		<header>
 			<p>The promise of good design</p>
 		</header>
 
@@ -151,7 +151,7 @@
 				Are there any other examples of promising designs for older people? Yes, but they are surprisingly difficult to find. They are so rare that when they are found, museums put on them on exhibit and newspapers write articles.
 			</p>
 		</section>
-<div class = "links">
+<div class = "links" id = "ahead">
 			<a class = "linkbutton" href="#intro">Intro</a>
 			<a class = "linkbutton" href="#consumer">Needs</a>
 			<a class = "linkbutton" href="#abounds">Bad Design</a>
@@ -163,7 +163,7 @@
 
 			
 
-		<header id = "ahead">
+		<header>
 			<p>Looking Ahead</p>
 		</header>
 		
