--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 	
 	<header id = "top">
+		<p class = "quoteheader">Don Norman</p>
+		<p>
 		<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
 		
 	</header>
