Minor typo fixes and language updates
(rewording some things)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		
 	</header>
 	<blockquote>
-		<p class = "quoteheader">Foreword</p>
+		<p class = "quoteheader">Preface</p>
 		<p>
 		The world is designed against the elderly, writes Don Norman, 83-year-old author of the industry bible Design of Everyday Things and a former Apple VP.
 		</p>
@@ -68,7 +68,7 @@
 				<a href="https://www.nia.nih.gov/health/vision-and-vision-loss/aging-and-your-eyes"target="_blank">Vision&nbsp;deteriorates.</a> The lens of our eyes harden, making focusing more difficult. I used to be able to read tiny text by holding it close to my eyes, but my inability to focus at close distances defeats that activity. Floaters and debris start accumulating inside the eye, which scatters the light on its way to the retina, reducing contrast and making it more difficult to see small, low-contrast objects. For the increasing number of people who have cataract surgery, the eye’s lenses have ben replaced with plastic, which usually have a fixed focus. (Artificial lenses that can be focused are under development.) A flashlight has become an essential item, whether the one built into many phones or carried separately, because illumination makes tiny type easier to read although even then, a magnifying glass might be useful.
 			</p>
 			<p>
-				<a hred="https://www.nia.nih.gov/health/hearing-and-hearing-loss/hearing-loss-common-problem-older-adults"target="_blank">Hearing&nbsp;decreases</a>. High frequencies are first to go, which also tends to impair directional sensitivity, which in turn makes it more difficult to attend to someone in a crowded, noisy environment. Loud restaurants are torture. So, more and more, my wife and I select restaurants by their noise level rather than by their food quality. At home while watching TV, whether shows, streaming events, or movies, we always turn on the captions, which often block critical parts of the image. Even worse, when a film shows someone speaking in a foreign language, the film often translates the words, but so too does the closed captioning, and the two are placed on top of one another, making both attempts to help the viewer completely unhelpful.
+				<a hred="https://www.nia.nih.gov/health/hearing-and-hearing-loss/hearing-loss-common-problem-older-adults"target="_blank">Hearing&nbsp;decreases.</a> High frequencies are first to go, which also tends to impair directional sensitivity, which in turn makes it more difficult to attend to someone in a crowded, noisy environment. Loud restaurants are torture. So, more and more, my wife and I select restaurants by their noise level rather than by their food quality. At home while watching TV, whether shows, streaming events, or movies, we always turn on the captions, which often block critical parts of the image. Even worse, when a film shows someone speaking in a foreign language, the film often translates the words, but so too does the closed captioning, and the two are placed on top of one another, making both attempts to help the viewer completely unhelpful.
 			</p>
 		</section>
 
@@ -166,7 +166,7 @@
 			
 
 		<header>
-			<p>Looking Ahead</p>
+			<p>Looking ahead</p>
 		</header>
 		
 			<p>
@@ -175,7 +175,7 @@
 		</section>
 	</article>
 		<blockquote>
-			<p class = "quoteheader">Closing</p>
+			<p class = "quoteheader">About the author</p>
 			<p>
 				Don Norman is a leading authority on the design of emotional pleasing and useable technology. He is the author of Design of Everyday Things and Emotional Design, a former vice president at Apple, and professor and director of the Design Lab at the University of California, San Diego.
 			</p>
